deployment/back-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backapp-deployment

spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backapp
    spec:
      containers:
        - name: stack-tech
          image: ehayanis/stack-tech:4
          ports:
            - name: back-port
              containerPort: 9000
