deployment/mongo-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo-deployment

spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: ehayanis/mongo
          ports:
            - name: mongo-port
              containerPort: 27017
