deployment/gateway-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service

spec:
  ports:
    - port: 8080
      targetPort: gateway-port
      protocol: TCP
  selector:
    app: gatewayapp
  type: NodePort
